tar (1.26+dfsg-11) unstable; urgency=low

  * tar-scripts must conflict with openafs-client, closes: #724064

 -- Bdale Garbee <bdale@gag.com>  Sun, 22 Sep 2013 18:00:35 -0600

tar (1.26+dfsg-10) unstable; urgency=low

  * tar-scripts should be optional, not required

 -- Bdale Garbee <bdale@gag.com>  Sun, 22 Sep 2013 01:09:42 -0600

tar (1.26+dfsg-9) unstable; urgency=low

  * add a tar-scripts package containing the --enable-backup-scripts content,
    which conflicts with files in at least the dump package, closes: #293671

 -- Bdale Garbee <bdale@gag.com>  Sat, 21 Sep 2013 09:44:48 -0600

tar (1.26+dfsg-8) unstable; urgency=low

  * cherry-pick upstream commit at Pino Toscano's suggestion to fix FTBFS
    on hurd-i386, closes: #719863

 -- Bdale Garbee <bdale@gag.com>  Fri, 16 Aug 2013 11:37:40 +0200

tar (1.26+dfsg-7) unstable; urgency=low

  * cherry-pick upstream commit at Marc Schaeffer's suggestion to fix
    --compare failures, closes: #614085

 -- Bdale Garbee <bdale@gag.com>  Thu, 15 Aug 2013 15:22:11 +0200

tar (1.26+dfsg-6) unstable; urgency=low

  * cherry-pick upstream commit at Paul Eggert's suggestion to address link
    extraction issue, closes: #452365

 -- Bdale Garbee <bdale@gag.com>  Fri, 31 May 2013 12:12:35 -0600

tar (1.26+dfsg-5) unstable; urgency=low

  [ Wookey ]
  * Fix included gnulib so we don't get FTBFS with eglibc-2.16, 
    closes: #693352, #701419

  [ Bdale Garbee ]
  * update mailcap entries to use %s, closes: #681302
  * include the http://www.gnu.org/software/tar/utils/tarcat script for use 
    with multi-volume archives, closes: #492036

 -- Bdale Garbee <bdale@gag.com>  Mon, 01 Apr 2013 09:17:04 -0600

tar (1.26+dfsg-0.1) unstable; urgency=low

  * non-maintainer upload
  * remove unused and non-DFSG compliant doc/*.texi and doc/*.info* files from
    source, closes: #695803

 -- David Prévot <taffit@debian.org>  Mon, 31 Dec 2012 11:05:50 -0400

tar (1.26-4) unstable; urgency=low
