@@ -1,1 +1,2 @@
+usr/lib/tar
 usr/sbin
